--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,14 @@
     <title>{% block title %}Efor Bilişim - IT Destek ve Donanım Hizmetleri{% endblock %}</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="{% block description %}Profesyonel IT destek ve donanım hizmetleri. Bilgisayar tamiri, kamera kurulumu, ağ kurulumu ve teknik danışmanlık hizmetleri. İstanbul'da güvenilir IT çözümleri.{% endblock %}">
-    <meta name="keywords" content="{% block keywords %}bilgisayar tamiri, kamera kurulumu, ağ kurulumu, IT destek, donanım satışı, veri kurtarma, teknik danışmanlık, İstanbul{% endblock %}">
+    <meta name="description" content="{% block description %}Efor Bilişim İstanbul'da profesyonel bilgisayar tamiri, uydu kurulumu ve IT destek hizmetleri. Söğütlüçeşme Mahallesi bilgisayar tamiri, kamera kurulumu, ağ kurulumu ve teknik danışmanlık hizmetleri. Güvenilir IT çözümleri.{% endblock %}">
+    <meta name="keywords" content="{% block keywords %}efor bilişim istanbul, bilgisayar tamiri istanbul, kamera kurulumu istanbul, ağ kurulumu, IT destek, donanım satışı, veri kurtarma, teknik danışmanlık, söğütlüçeşme mahallesi bilgisayar tamiri, uydu kurulumu, uydu anten kurulumu{% endblock %}">
     <meta name="author" content="Efor Bilişim">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="{% block og_title %}Efor Bilişim - IT Destek ve Donanım Hizmetleri{% endblock %}">
-    <meta property="og:description" content="{% block og_description %}Profesyonel IT destek ve donanım hizmetleri. Bilgisayar tamiri, kamera kurulumu ve teknik danışmanlık.{% endblock %}">
+    <meta property="og:title" content="{% block og_title %}Efor Bilişim - İstanbul'da Profesyonel Bilgisayar Tamiri ve Uydu Kurulumu{% endblock %}">
+    <meta property="og:description" content="{% block og_description %}Efor Bilişim İstanbul'da profesyonel bilgisayar tamiri, uydu kurulumu ve IT destek hizmetleri. Söğütlüçeşme Mahallesi bilgisayar tamiri, kamera kurulumu ve teknik danışmanlık.{% endblock %}">
     <meta property="og:image" content="{{ url_for('static', filename='images/efor-logo.png', _external=True) }}">
     <meta property="og:url" content="{{ request.url }}">
     <meta property="og:type" content="website">
@@ -21,8 +21,8 @@
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{% block twitter_title %}Efor Bilişim - IT Destek ve Donanım Hizmetleri{% endblock %}">
-    <meta name="twitter:description" content="{% block twitter_description %}Profesyonel IT destek ve donanım hizmetleri.{% endblock %}">
+    <meta name="twitter:title" content="{% block twitter_title %}Efor Bilişim - İstanbul'da Profesyonel IT Destek ve Donanım Hizmetleri{% endblock %}">
+    <meta name="twitter:description" content="{% block twitter_description %}Efor Bilişim İstanbul'da profesyonel bilgisayar tamiri, uydu kurulumu ve IT destek hizmetleri.{% endblock %}">
     <meta name="twitter:image" content="{{ url_for('static', filename='images/efor-logo.png', _external=True) }}">
     
     <!-- Canonical URL -->
