--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}İletişim - Efor Bilişim{% endblock %}
+{% block title %}İletişim - Efor Bilişim İstanbul'da Bilgisayar Tamiri ve Uydu Kurulumu Hizmetleri{% endblock %}
+
+{% block description %}Efor Bilişim İstanbul'da bilgisayar tamiri ve uydu kurulumu için iletişime geçin. Söğütlüçeşme Mahallesi bilgisayar tamiri, uydu kurulumu, kamera kurulumu ve IT destek hizmetleri için ücretsiz teklif alın. 7/24 hizmet.{% endblock %}
+
+{% block keywords %}efor bilişim istanbul, efor bilişim iletişim, bilgisayar tamiri istanbul, bilgisayar tamiri telefon, IT destek iletişim, kamera kurulum iletişim, istanbul bilgisayar servisi telefon, söğütlüçeşme mahallesi bilgisayar tamiri, uydu kurulumu, uydu anten kurulumu{% endblock %}
+
+{% block og_title %}İletişim - Efor Bilişim İstanbul'da Bilgisayar Tamiri ve Uydu Kurulumu{% endblock %}
+
+{% block og_description %}Efor Bilişim İstanbul'da bilgisayar tamiri, uydu kurulumu, kamera kurulumu ve IT destek için iletişime geçin. Söğütlüçeşme Mahallesi bilgisayar tamiri. 7/24 hizmet.{% endblock %}
+
+{% block twitter_title %}İletişim - Efor Bilişim İstanbul{% endblock %}
+
+{% block twitter_description %}Efor Bilişim İstanbul'da bilgisayar tamiri ve uydu kurulumu için iletişime geçin. 7/24 hizmet.{% endblock %}
 
 {% block content %}
 <!-- Contact Hero Section -->
