--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}Ana Sayfa - Efor Bilişim{% endblock %}
+{% block title %}Efor Bilişim - İstanbul'da Profesyonel Bilgisayar Tamiri, Uydu Kurulumu ve IT Destek{% endblock %}
+
+{% block description %}Efor Bilişim İstanbul'da profesyonel bilgisayar tamiri, uydu kurulumu, kamera kurulumu ve IT destek hizmetleri. Söğütlüçeşme Mahallesi bilgisayar tamiri, uydu anten kurulumu. 7/24 teknik destek, uygun fiyat, garantili hizmet.{% endblock %}
+
+{% block keywords %}efor bilişim istanbul, bilgisayar tamiri istanbul, kamera kurulumu istanbul, ağ kurulumu, IT destek, bilgisayar servisi, kamera sistemi, wifi kurulumu, veri kurtarma, donanım satışı, teknik servis, söğütlüçeşme mahallesi bilgisayar tamiri, uydu kurulumu, uydu anten kurulumu{% endblock %}
+
+{% block og_title %}Efor Bilişim - İstanbul'da Profesyonel Bilgisayar Tamiri ve Uydu Kurulumu{% endblock %}
+
+{% block og_description %}Efor Bilişim İstanbul'da bilgisayar tamiri, uydu kurulumu, kamera kurulumu ve IT destek hizmetleri. Söğütlüçeşme Mahallesi bilgisayar tamiri. 7/24 teknik destek.{% endblock %}
+
+{% block twitter_title %}Efor Bilişim - İstanbul'da Profesyonel IT Destek{% endblock %}
+
+{% block twitter_description %}Efor Bilişim İstanbul'da bilgisayar tamiri, uydu kurulumu, kamera kurulumu. 7/24 IT destek hizmetleri.{% endblock %}
 
 {% block content %}
 <!-- Hero Section -->
