--- a/templates/services.html
+++ b/templates/services.html
@@ -1,6 +1,18 @@
 {% extends "base.html" %}
 
-{% block title %}Hizmetlerimiz - Efor Bilişim{% endblock %}
+{% block title %}Hizmetlerimiz - Efor Bilişim İstanbul'da Bilgisayar Tamiri, Uydu Kurulumu, Kamera Kurulumu{% endblock %}
+
+{% block description %}Efor Bilişim İstanbul'da bilgisayar tamiri, uydu kurulumu, kamera kurulumu, ağ kurulumu, veri kurtarma, donanım satışı ve teknik danışmanlık hizmetleri. Söğütlüçeşme Mahallesi bilgisayar tamiri, uydu anten kurulumu. Profesyonel IT çözümleri.{% endblock %}
+
+{% block keywords %}efor bilişim istanbul, bilgisayar tamiri istanbul, kamera kurulumu istanbul, ağ kurulumu, veri kurtarma, donanım satışı, teknik danışmanlık, uydu sistemi, TV kurulumu, wifi kurulumu, bilgisayar servisi istanbul, söğütlüçeşme mahallesi bilgisayar tamiri, uydu kurulumu, uydu anten kurulumu{% endblock %}
+
+{% block og_title %}Hizmetlerimiz - Efor Bilişim İstanbul'da Bilgisayar Tamiri ve Uydu Kurulumu{% endblock %}
+
+{% block og_description %}Efor Bilişim İstanbul'da bilgisayar tamiri, uydu kurulumu, kamera kurulumu, ağ kurulumu ve veri kurtarma. Söğütlüçeşme Mahallesi bilgisayar tamiri. Profesyonel IT hizmetleri.{% endblock %}
+
+{% block twitter_title %}Hizmetlerimiz - Efor Bilişim İstanbul{% endblock %}
+
+{% block twitter_description %}Efor Bilişim İstanbul'da bilgisayar tamiri, uydu kurulumu, kamera kurulumu ve ağ kurulumu hizmetleri.{% endblock %}
 
 {% block content %}
 <!-- Services Hero Section -->
