--- a/templates/base.html
+++ b/templates/base.html
@@ -15,15 +15,47 @@
     <meta property="og:title" content="{% block og_title %}Efor Bilişim - İstanbul'da Profesyonel Bilgisayar Tamiri ve Uydu Kurulumu{% endblock %}">
     <meta property="og:description" content="{% block og_description %}Efor Bilişim İstanbul'da profesyonel bilgisayar tamiri, uydu kurulumu ve IT destek hizmetleri. Söğütlüçeşme Mahallesi bilgisayar tamiri, kamera kurulumu ve teknik danışmanlık.{% endblock %}">
     <meta property="og:image" content="{{ url_for('static', filename='images/efor-logo.png', _external=True) }}">
+    <meta property="og:image:width" content="512">
+    <meta property="og:image:height" content="512">
+    <meta property="og:image:alt" content="Efor Bilişim Logo - Profesyonel IT Destek ve Donanım Hizmetleri">
     <meta property="og:url" content="{{ request.url }}">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Efor Bilişim">
+    <meta property="og:locale" content="tr_TR">
+    
+    <!-- Facebook Meta Tags -->
+    <meta property="fb:app_id" content="123456789012345">
+    <meta property="fb:pages" content="eforbilisimweb">
+    <meta property="fb:admins" content="eforbilisim">
     
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{% block twitter_title %}Efor Bilişim - İstanbul'da Profesyonel IT Destek ve Donanım Hizmetleri{% endblock %}">
     <meta name="twitter:description" content="{% block twitter_description %}Efor Bilişim İstanbul'da profesyonel bilgisayar tamiri, uydu kurulumu ve IT destek hizmetleri.{% endblock %}">
     <meta name="twitter:image" content="{{ url_for('static', filename='images/efor-logo.png', _external=True) }}">
+    <meta name="twitter:image:alt" content="Efor Bilişim Logo">
+    <meta name="twitter:site" content="@eforbilisim">
+    <meta name="twitter:creator" content="@eforbilisim">
+    
+    <!-- Additional SEO Meta Tags for Logo -->
+    <meta name="image" content="{{ url_for('static', filename='images/efor-logo.png', _external=True) }}">
+    <meta name="thumbnail" content="{{ url_for('static', filename='images/efor-logo.png', _external=True) }}">
+    
+    <!-- Additional Facebook/Open Graph Tags -->
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:secure_url" content="{{ url_for('static', filename='images/efor-logo.png', _external=True) }}">
+    <meta property="og:updated_time" content="2025-06-29T21:48:00Z">
+    <meta property="og:see_also" content="{{ request.url_root }}">
+    
+    <!-- Business Specific Meta Tags -->
+    <meta property="business:contact_data:street_address" content="Söğütlü Çeşme Mahallesi, 2.Barbaros Sk. No:44">
+    <meta property="business:contact_data:locality" content="Küçükçekmece">
+    <meta property="business:contact_data:region" content="İstanbul">
+    <meta property="business:contact_data:postal_code" content="34579">
+    <meta property="business:contact_data:country_name" content="Türkiye">
+    <meta property="business:contact_data:phone_number" content="+90 536 878 51 57">
+    <meta property="business:contact_data:email" content="info@eforbilisim.com">
+    <meta property="business:contact_data:website" content="{{ request.url_root }}">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="{{ request.url }}">
@@ -197,13 +229,28 @@
         "name": "Efor Bilişim",
         "description": "Profesyonel IT destek ve donanım hizmetleri",
         "url": "{{ request.url_root }}",
-        "logo": "{{ url_for('static', filename='images/efor-logo.png', _external=True) }}",
-        "image": "{{ url_for('static', filename='images/efor-logo.png', _external=True) }}",
-        "telephone": "+90 537 958 20 51",
+        "logo": {
+            "@type": "ImageObject",
+            "url": "{{ url_for('static', filename='images/efor-logo.png', _external=True) }}",
+            "width": 512,
+            "height": 512,
+            "caption": "Efor Bilişim Logo"
+        },
+        "image": {
+            "@type": "ImageObject",
+            "url": "{{ url_for('static', filename='images/efor-logo.png', _external=True) }}",
+            "width": 512,
+            "height": 512,
+            "caption": "Efor Bilişim - Profesyonel IT Destek ve Donanım Hizmetleri"
+        },
+        "telephone": "+90 536 878 51 57",
         "email": "info@eforbilisim.com",
         "address": {
             "@type": "PostalAddress",
-            "addressLocality": "İstanbul",
+            "streetAddress": "Söğütlü Çeşme Mahallesi, 2.Barbaros Sk. No:44",
+            "addressLocality": "Küçükçekmece",
+            "addressRegion": "İstanbul",
+            "postalCode": "34579",
             "addressCountry": "TR"
         },
         "geo": {
@@ -217,6 +264,10 @@
             "@type": "City",
             "name": "İstanbul"
         },
+        "sameAs": [
+            "https://www.instagram.com/eforbilisim/",
+            "https://www.facebook.com/eforbilisimweb/"
+        ],
         "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "IT Hizmetleri",
