--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
     <meta property="business:contact_data:website" content="{{ request.url_root }}">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="{{ request.url }}">
+    <link rel="canonical" href="https://eforbilisim.com{{ request.path }}">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/efor-logo.png') }}">
