--- a/templates/home.html
+++ b/templates/home.html
@@ -230,7 +230,7 @@
         </div>
         <div class="row justify-content-center align-items-center g-4">
             <div class="col-6 col-md-3 col-lg-2">
-                <img src="{{ url_for('static', filename='images/efor-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
+                <img src="{{ url_for('static', filename='images/atlantis-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
             </div>
             <div class="col-6 col-md-3 col-lg-2">
                 <img src="{{ url_for('static', filename='images/efor-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
