--- a/templates/home.html
+++ b/templates/home.html
@@ -233,13 +233,13 @@
                 <img src="{{ url_for('static', filename='images/atlantis-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
             </div>
             <div class="col-6 col-md-3 col-lg-2">
-                <img src="{{ url_for('static', filename='images/efor-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
+                <img src="{{ url_for('static', filename='images/ascan-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
             </div>
             <div class="col-6 col-md-3 col-lg-2">
-                <img src="{{ url_for('static', filename='images/efor-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
+                <img src="{{ url_for('static', filename='images/gama-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
             </div>
             <div class="col-6 col-md-3 col-lg-2">
-                <img src="{{ url_for('static', filename='images/efor-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
+                <img src="{{ url_for('static', filename='images/alglab-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
             </div>
             <div class="col-6 col-md-3 col-lg-2">
                 <img src="{{ url_for('static', filename='images/efor-logo.png') }}" class="img-fluid reference-logo" alt="Referans Dummy">
